# discord-rolebot

./: .gitignore  README.md  optional_deps.txt  pyproject.toml  requirements.in  requirements.txt  rolebot.py
.github/: FUNDING.yml
.github/workflows/: lints.yml
rolebot/: __init__.py  __main__.py  encoder.py
