[project]
name = "discord-rolebot"
requires-python = ">=3.11"

[tool.ruff]

line-length = 120
target-version = "py311"
select = [
    "F", "E", "I", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ",
    "EM", "ISC", "G", "INP", "PIE", "T20", "Q003", "RSE", "RET", "SIM", "TID", "PTH",
    "ERA", "PD", "PLC", "PLE", "PLR", "PLW", "TRY", "NPY", "RUF"
]
ignore = [
    "G002",  # erroneous issue with %-logging when logging can be confiured for % logging
    "S101",  # use of assert here is a known quantity, blame typing memes
    "PLR2004",  # Magic value comparison, may remove later
    "SIM105",  # supressable exception, I'm not paying the overhead of contextlib.supress for stylistic choices.
    "C90",  # mccabe complexity memes
]
unfixable = [
    "ERA"  # I don't want anything erroneously detected deleted by this.
]


[tool.pyright]
include = ["rolebot.py"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
